# ffopt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-ci.yml
ffopt/: main_cli.py
ffopt/core/: pipeline.py  prepare.py  software_runner.py
ffopt/jobs/: abstract_job.py  error_calculator.py  gulp_job.py  job.py  objective_function.py  utils.py
ffopt/optimization/: adapter.py  base.py
ffopt/parsers/: base.py  cif.py  gulp.py
test_files/: MOO_test_input.toml  NbS.cif  WS2_2H.cif  WS2_gamma.out  WS2_kpoints.out  bounds.txt  simple_template.txt  soo_template.txt  test_input.toml
tests/: test_adapter.py  test_error_calc.py  test_software_runner.py
tests/parsers/: test_cif.py  test_gulp_single_system.py
