[tool.poetry]
name = "ffopt"
version = "0.1.0"
description = "Simple tool for force-field optimization"
authors = ["Anton Domnin <a.v.daomnin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
