[tool.poetry]
name = "ffopt"
version = "0.1.0"
description = "Simple tool for force-field optimization"
authors = ["Anton Domnin <a.v.daomnin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyxtal = "^1.0.3"
pymatgen = "^2024.9.17.1"
attrs = "^24.2.0"
numba = "^0.60.0"
pymoo = "^0.6.1.1"
joblib = "^1.4.2"
pandas = "^2.2.2"
numpy = "^1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
